--- a/Assets/CSS/estilos.css
+++ b/Assets/CSS/estilos.css
@@ -38,6 +38,10 @@ aside{
     border: solid;
 }
 
+.bg-isr{
+    background-color: rgb(57,102, 108);
+}
+
 .cabecera{
     display: flex;
     flex-direction: row;
@@ -214,12 +218,12 @@ header{
     background-color: rgb(57,102, 108);
     display: flex;
     justify-content: space-between;    
-    align-items: center;
-    height: 8rem;
+    align-items:flex-start;
+    height: 3.75rem;
     grid-area: header;
 }
 
-html,body{
+html, body{
     width: 100%;
     height: 100vh;
 }
@@ -321,19 +325,27 @@ html,body{
 
 .menu__item{
     display: inline-block;
-    margin: 0 1rem;
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
+    font-size: .75rem;
 }
 
 
 .menu__link{
     text-decoration: none;
     color: white;
+    align-items: center;
+    list-style-type: none;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: white;
+    font-size: .9rem;
 }
 
 .menu__link:hover{
     color: #beee42;
+
 }
 
 .p__angosto1{
